# ProseDown

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  dev.sh  proposal.md  release.sh  run.sh  rust-toolchain.toml
.github/workflows/: ci.yml
homebrew/: prosedown.rb
macos/: README.md
macos/Sources/: App.swift  DocumentWindow.swift  MarkdownDocument.swift  RecentFiles.swift  Sidebar.swift  Toolbar.swift  WebViewBridge.swift
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs  watcher.rs
web/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
web/public/: sample.md
web/src/: bridge.ts  main.ts  worker.ts
web/src/pipeline/: alerts.test.ts  alerts.ts  bench.test.ts  markdown.test.ts  markdown.ts  math.test.ts  math.ts  mermaid.ts  shiki.ts
web/src/styles/: chrome.css  prose-macos.css
web/src/ui/: findbar.ts  linkcheck.ts  scrollmemory.ts  sidebar.ts  toolbar.ts
